# SLMFL

./: README.md  pyproject.toml
gpt2flower/: __init__.py  client_app.py  server_app.py  task.py
