[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt2flower"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.0",
    "flwr-datasets>=0.3.0",
    "torch==2.2.1",
    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "scikit-learn>=1.3.1, <2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hamadexe"

[tool.flwr.app.components]
serverapp = "gpt2flower.server_app:app"
clientapp = "gpt2flower.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 50
fraction-fit = 0.3
local-epochs = 1
model-name = "openai-community/gpt2" # Set a larger model if you have access to more GPU resources
num-labels = 2

[tool.flwr.federations]
default = "localhost"

[tool.flwr.federations.localhost]
options.num-supernodes = 3

[tool.flwr.federations.localhost-gpu]
options.num-supernodes = 20
options.backend.client-resources.num-cpus = 4 # each ClientApp assumes to use 4CPUs
options.backend.client-resources.num-gpus = 0.25 # at most 4 ClientApps will run in a given GPU
